# airflow

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: publish.yml
dags/: it_be_me_dag.py  test.py
test/: test_slack.py  test_twitch.py
whalenet_airflow/dags/: it_be_me_dag.py  twitch_to_slack_dag.py
whalenet_airflow/lib/: slack.py  twitch.py
