# TODO VANILLA TOML
# pip install "apache-airflow[celery]==2.8.1" --constraint "https://raw.githubusercontent.com/apache/airflow/constraints-2.8.1/constraints-3.8.txt"

[tool.poetry]
name = "airflow"
version = "0.1.0"
description = ""
authors = ["qmastermoo <alex.harding@whale-net.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
