[build-system]
requires = ['setuptools', 'setuptools_scm[toml]>=6.2']
build-backend = 'setuptools.build_meta'

[project]
name = 'whalenet-airflow'
authors = [{name = 'Alex Harding'}]
version = "0.1.0"
dependencies = [
    'slack_sdk',
    'twitchAPI'
]

[tool.setuptools.packages.find]
where = ['.']
include = ['whalenet_airflow*']
exclude = ['tests*']
namespaces = false  # true by default # not sure what it does though - copied from giford

[project.optional-dependencies]
# trying to pin version because i have errors running in deploy
# https://raw.githubusercontent.com/apache/airflow/constraints-2.8.1/constraints-3.11.txt
deploy = [
    'redis==4.6.0'
]
# airflow-dev = [
#     'airflow=2.8.1',
# ]
# lint = [
#     'ruff',
#     'isort'
# ]
dev = [
    'pytest'
    #'whalenet-airflow[lint]',
    #'whalenet-airflow[airflow-dev]'
]
